Unify errors between middleware and controllers - Also add operation list capability
