# documentation/openapi.json
@@ -796,6 +796,31 @@
         }
       }
     },
+    "/operation": {
+      "get": {
+        "tags": [
+          "Operation"
+        ],
+        "responses": {
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedResponse"
+          },
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/OperationSummary"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/operation/{operationId}": {
       "get": {
         "tags": [
@@ -813,6 +838,9 @@
           }
         ],
         "responses": {
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedResponse"
+          },
           "201": {
             "description": "Success",
             "content": {
@@ -851,6 +879,9 @@
           }
         ],
         "responses": {
+          "401": {
+            "$ref": "#/components/responses/UnauthorizedResponse"
+          },
           "200": {
             "description": "Success"
           }
@@ -957,6 +988,33 @@
           "Triage"
         ],
         "type": "string"
+      },
+      "ProblemDetails": {
+        "type": "object",
+        "properties": {
+          "type": {
+            "type": "string",
+            "nullable": true
+          },
+          "title": {
+            "type": "string",
+            "nullable": true
+          },
+          "status": {
+            "type": "integer",
+            "format": "int32",
+            "nullable": true
+          },
+          "detail": {
+            "type": "string",
+            "nullable": true
+          },
+          "instance": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": { }
       },
       "TraceProfile": {
         "enum": [
@@ -1074,6 +1132,24 @@
         ],
         "type": "string"
       },
+      "OperationSummary": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "format": "uuid"
+          },
+          "createdDateTime": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "status": {
+            "$ref": "#/components/schemas/OperationState"
+          }
+        },
+        "additionalProperties": false,
+        "description": "Represents a partial model when enumerating all operations."
+      },
       "OperationError": {
         "type": "object",
         "properties": {
@@ -1136,7 +1212,14 @@
         }
       },
       "TooManyRequestsResponse": {
-        "description": "TooManyRequests"
+        "description": "TooManyRequests",
+        "content": {
+          "application/problem+json": {
+            "schema": {
+              "$ref": "#/components/schemas/ProblemDetails"
+            }
+          }
+        }
       }
     }
   }
